force-app/main/default/objects/ampi__Risk_Assessment__c/ampi__Risk_Assessment__c.object-meta.xml
<CustomObject>
    <description>Monitor and reassess identified risks, identify new risks, and track risk events related to projects/grants for evaluation</description>
    <label>Risk Assessment</label>
    <nameField>
        <label>Risk Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>