force-app/main/default/objects/ampi__Risk_Assessment__c/fields/ampi__Actual_Impact__c.field-meta.xml
<CustomField>
    <fullName>ampi__Actual_Impact__c</fullName>
    <description>Track the severity of the actual risk that occurred in terms of impact it had on our project&apos;s achievement of goals (i.e. high, med/high, med, med/low, low)</description>
    <inlineHelpText>Indicate the consequence of the risk occurring. Compare this to the &apos;potential impact&apos; value assigned to this risk</inlineHelpText>
    <label>Actual Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>