force-app/main/default/objects/ampi__Risk_Assessment__c/fields/ampi__Contact__c.field-meta.xml
<CustomField>
    <fullName>ampi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Point of contact for monitoring and evaluating the risk assessment</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>