force-app/main/default/objects/ampi__Risk_Assessment__c/fields/ampi__Continued_Risk__c.field-meta.xml
<CustomField>
    <fullName>ampi__Continued_Risk__c</fullName>
    <description>Re-assess risks that were previously identified and confirm if they are still risks</description>
    <inlineHelpText>Evaluate if this risk should continue to be monitored and evaluated on an ongoing basis</inlineHelpText>
    <label>Continued Risk?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>