force-app/main/default/objects/ampi__Risk_Assessment__c/fields/ampi__Description_of_Event__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description_of_Event__c</fullName>
    <description>Track how an actual risk event that occurred was responded to, see how it aligned with the set plan and use that information for future mitigation strategies</description>
    <inlineHelpText>Provide a description of the event(s) or activities that happened when the risk occurred. Explain how it happened, when it happened, where it happened and what happened.</inlineHelpText>
    <label>Description of Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>