force-app/main/default/objects/ampi__Risk_Assessment__c/fields/ampi__Reason_No_Longer_a_Risk__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reason_No_Longer_a_Risk__c</fullName>
    <description>Understand why a previously identified risk is no longer considered a risk. May use this information for future mitigation strategies</description>
    <inlineHelpText>Provide additional information if &apos;Continued Risk&apos; = No</inlineHelpText>
    <label>Reason No Longer a Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>