force-app/main/default/objects/ampi__Risk_Assessment__c/fields/ampi__Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>View identified risk and actual risk events that have occurred in a specified time period</description>
    <label>Reporting Period</label>
    <referenceTo>ampi__Reporting_Period__c</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>