force-app/main/default/objects/ampi__Risk_Assessment__c/fields/ampi__Risk__c.field-meta.xml
<CustomField>
    <fullName>ampi__Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Track which Risk this assessment is related to</description>
    <label>Risk</label>
    <referenceTo>ampi__Risk__c</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>