force-app/main/default/objects/ampi__Risk_Assessment__c/fields/ampi__Risk_Occurred__c.field-meta.xml
<CustomField>
    <fullName>ampi__Risk_Occurred__c</fullName>
    <description>Track if a risk event happened or not</description>
    <inlineHelpText>Indicate if the Risk happened. Describe what happened in the &quot;Description of Event&quot; field</inlineHelpText>
    <label>Risk Occurred?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>