force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Connected to approvals</description>
    <inlineHelpText>Connected to approvals</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>