force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Conflict_Comments__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Comments__c</fullName>
    <label>Conflict Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>