force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Conflict_Response__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Response__c</fullName>
    <label>Conflict Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>