force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Conflict_Response_Language_2__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Response_Language_2__c</fullName>
    <label>Conflict_Response Language 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>