force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Conflict_Score__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Score__c</fullName>
    <label>Conflict Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>