force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Crime_Security_Comments__c.field-meta.xml
<CustomField>
    <fullName>Crime_Security_Comments__c</fullName>
    <label>Crime &amp; Security Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>