force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Crime_Security_Response_Language_2__c.field-meta.xml
<CustomField>
    <fullName>Crime_Security_Response_Language_2__c</fullName>
    <label>Crime Security Response Language 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>