force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Crime_Security_Score__c.field-meta.xml
<CustomField>
    <fullName>Crime_Security_Score__c</fullName>
    <label>Crime &amp; Security Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>