force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>Description_Language_3__c</fullName>
    <label>Description Language 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>