force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Description_Translated__c.field-meta.xml
<CustomField>
    <fullName>Description_Translated__c</fullName>
    <label>Description Translated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>