force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Humanitarian_Space_Response__c.field-meta.xml
<CustomField>
    <fullName>Humanitarian_Space_Response__c</fullName>
    <label>Humanitarian Space Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>