force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Humanitarian_Space_Response_Language_1__c.field-meta.xml
<CustomField>
    <fullName>Humanitarian_Space_Response_Language_1__c</fullName>
    <label>Humanitarian_Space Response Language 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>