force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Humanitarian_Space_Score__c.field-meta.xml
<CustomField>
    <fullName>Humanitarian_Space_Score__c</fullName>
    <label>Humanitarian Space Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>