force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Infrastructure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Comments__c</fullName>
    <label>Infrastructure Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>