force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Infrastructure_Response__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Response__c</fullName>
    <label>Infrastructure Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>