force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Infrastructure_Response_Language_3__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Response_Language_3__c</fullName>
    <label>Infrastructure Response Language 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>