force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Infrastructure_Score__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Score__c</fullName>
    <label>Infrastructure Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>