force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Kidnap_Comments__c.field-meta.xml
<CustomField>
    <fullName>Kidnap_Comments__c</fullName>
    <label>Kidnap Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>