force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Kidnap_Response__c.field-meta.xml
<CustomField>
    <fullName>Kidnap_Response__c</fullName>
    <label>Kidnap Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>