force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Kidnap_Response_Language_3__c.field-meta.xml
<CustomField>
    <fullName>Kidnap_Response_Language_3__c</fullName>
    <label>Kidnap Response Language 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>