force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Language_Info__c.field-meta.xml
<CustomField>
    <fullName>Language_Info__c</fullName>
    <label>Language Info</label>
    <length>5</length>
    <type>Text</type>
</CustomField>