force-app/main/default/objects/ampi__Risk_Assessment__c/fields/National_Association__c.field-meta.xml
<CustomField>
    <fullName>National_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Association</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk Reviews: National Security Context</relationshipLabel>
    <relationshipName>Risk_Reviews_National_Association</relationshipName>
    <type>Lookup</type>
</CustomField>