force-app/main/default/objects/ampi__Risk_Assessment__c/fields/National_Association_Name__c.field-meta.xml
<CustomField>
    <fullName>National_Association_Name__c</fullName>
    <formula>HYPERLINK(IF(OR(FIND(&apos;my.site.com&apos;, $Api.Partner_Server_URL_570)&gt;0,FIND(&apos;prodigi.sos-kd&apos;, $Api.Partner_Server_URL_570)&gt;0),&apos;/s/account&apos;,&apos;&apos;) + &apos;/&apos; +  National_Association__c, National_Association__r.Name, &apos;_self&apos;)</formula>
    <label>National Association Name</label>
    <type>Text</type>
</CustomField>