force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Risk_Review_Name_Language_3__c.field-meta.xml
<CustomField>
    <fullName>Risk_Review_Name_Language_3__c</fullName>
    <label>Risk Review Name Language 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>