force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Risk_Review_Template__c.field-meta.xml
<CustomField>
    <fullName>Risk_Review_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Review Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ampi__Submission__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template</value>
        </filterItems>
        <infoMessage>Please select which Submission Template you want to use for the Risk Review.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Submission__c</referenceTo>
    <relationshipLabel>Risk Reviews</relationshipLabel>
    <relationshipName>Risk_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>