force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Social_Political_Comments__c.field-meta.xml
<CustomField>
    <fullName>Social_Political_Comments__c</fullName>
    <label>Social &amp; Political Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>