force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Social_Political_Response_Language_1__c.field-meta.xml
<CustomField>
    <fullName>Social_Political_Response_Language_1__c</fullName>
    <label>Social Political Response Language 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>