force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Social_Political_Score__c.field-meta.xml
<CustomField>
    <fullName>Social_Political_Score__c</fullName>
    <label>Social &amp; Political Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>