force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Terrorism_Comments__c.field-meta.xml
<CustomField>
    <fullName>Terrorism_Comments__c</fullName>
    <label>Terrorism Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>