force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Terrorism_Response__c.field-meta.xml
<CustomField>
    <fullName>Terrorism_Response__c</fullName>
    <label>Terrorism Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>