force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Terrorism_Response_Language_2__c.field-meta.xml
<CustomField>
    <fullName>Terrorism_Response_Language_2__c</fullName>
    <label>Terrorism Response Language 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>