force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Terrorism_Score__c.field-meta.xml
<CustomField>
    <fullName>Terrorism_Score__c</fullName>
    <label>Terrorism Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>