force-app/main/default/objects/ampi__Risk_Assessment__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>((
IF(ISNULL(Social_Political_Score__c), 0, Social_Political_Score__c) +
IF(ISNULL(Crime_Security_Score__c), 0, Crime_Security_Score__c) +
IF(ISNULL(Conflict_Score__c), 0, Conflict_Score__c) +
IF(ISNULL(Terrorism_Score__c), 0, Terrorism_Score__c) +
IF(ISNULL(Kidnap_Score__c), 0, Kidnap_Score__c)
)/5)*20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Overall security risk for the National Association. Calculated automatically (Average score of Social &amp; Political, Crime &amp; Security, Conflict, Terrorism and Kidnap Scores)</inlineHelpText>
    <label>National Context Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>