force-app/main/default/objects/ampi__Risk_Assessment__c/recordTypes/NA_Risk_Review.recordType-meta.xml
<RecordType>
    <fullName>NA_Risk_Review</fullName>
    <active>true</active>
    <label>New National Security Context</label>
</RecordType>