force-app/main/default/objects/ampi__Risk_Assessment__c/recordTypes/NA_Safety_Security_Risk_Review_New.recordType-meta.xml
<RecordType>
    <fullName>NA_Safety_Security_Risk_Review_New</fullName>
    <active>false</active>
    <label>National Security Context</label>
</RecordType>