force-app/main/default/objects/ampi__Risk_Assessment__c/recordTypes/Project_Risk_Review.recordType-meta.xml
<RecordType>
    <fullName>Project_Risk_Review</fullName>
    <active>true</active>
    <label>Project Risk Review</label>
</RecordType>