force-app/main/default/objects/ampi__Risk_Assessment__c/validationRules/Edit_RiskReview_NA_Director_Reviewer.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_RiskReview_NA_Director_Reviewer</fullName>
    <active>true</active>
    <description>Only NA Director or Risk Reviewer are allowed to edit a risk review that is related to this NA</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;NA_Safety_Security_Risk_Review_New&apos;, 
OR(TEXT(Status__c) = &apos;Approved&apos;,
TEXT(Status__c) = &apos;Declined&apos;,
ISCHANGED(Social_Political_Response__c),
ISCHANGED(Description__c),
ISCHANGED(Name),
ISCHANGED(Crime_Security_Response__c),
ISCHANGED(Conflict_Response__c),
ISCHANGED(Terrorism_Response__c),
ISCHANGED(Kidnap_Response__c),
ISCHANGED(Humanitarian_Space_Response__c),
ISCHANGED(Infrastructure_Response__c),
ISCHANGED(Social_Political_Comments__c),
ISCHANGED(Crime_Security_Comments__c),
ISCHANGED(Conflict_Comments__c),
ISCHANGED(Terrorism_Comments__c),
ISCHANGED(Kidnap_Comments__c),
ISCHANGED(Humanitarian_Space_Comments__c),
ISCHANGED(Infrastructure_Comments__c),
ISCHANGED(Social_Political_Score__c),
ISCHANGED(Crime_Security_Score__c),
ISCHANGED(Conflict_Score__c),
ISCHANGED(Terrorism_Score__c),
ISCHANGED(Kidnap_Score__c),
ISCHANGED(Humanitarian_Space_Score__c),
ISCHANGED(Infrastructure_Score__c)),NOT(OR(National_Association__r.NA_Risk_Reviewer__r.Email = $User.Email, National_Association__r.NA_Director__r.Email = $User.Email)))</errorConditionFormula>
    <errorMessage>Only NA Director or Risk Reviewer are allowed to edit a risk review that is related to this NA on status &quot;Draft&quot; or &quot;Pending Revise&quot;</errorMessage>
</ValidationRule>