force-app/main/default/objects/ampi__Risk_Assessment__c/validationRules/Validation_In_Status_Approved_Declined.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_In_Status_Approved_Declined</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(TEXT(Status__c) = &apos;Approved&apos;, TEXT(Status__c) = &apos;Declined&apos;), RecordType.DeveloperName = &apos;NA_Safety_Security_Risk_Review_New&apos;, OR(ISCHANGED(Social_Political_Response__c),
ISCHANGED(Description__c),
ISCHANGED(Name),
ISCHANGED(Crime_Security_Response__c),
ISCHANGED(Conflict_Response__c),
ISCHANGED(Terrorism_Response__c),
ISCHANGED(Kidnap_Response__c),
ISCHANGED(Humanitarian_Space_Response__c),
ISCHANGED(Infrastructure_Response__c),
ISCHANGED(Social_Political_Comments__c),
ISCHANGED(Crime_Security_Comments__c),
ISCHANGED(Conflict_Comments__c),
ISCHANGED(Terrorism_Comments__c),
ISCHANGED(Kidnap_Comments__c),
ISCHANGED(Humanitarian_Space_Comments__c),
ISCHANGED(Infrastructure_Comments__c),
ISCHANGED(Social_Political_Score__c),
ISCHANGED(Crime_Security_Score__c),
ISCHANGED(Conflict_Score__c),
ISCHANGED(Terrorism_Score__c),
ISCHANGED(Kidnap_Score__c),
ISCHANGED(Humanitarian_Space_Score__c),
ISCHANGED(Infrastructure_Score__c)))</errorConditionFormula>
    <errorMessage>Risk Review cannot be changed when status is &quot;Approved&quot; or &quot;Declined&quot;</errorMessage>
</ValidationRule>